Projet GL/test/src/test/deca/context/invalid/increment1/print-bool.deca
//test rule (3.31)

// Raison : Print arguments

// Résultats : Ligne 15 "print arguments must be int, float or string type"

// Historique :
//  cree le 05/01/2023

{
    boolean b;
    b = true;

    //Must be refused
    print(b);
}